[package]
name = "xcur"
version = "0.1.3"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]
license = "GPL-3.0"
description = "Library for parsing XCursor files"
documentation = "http://jeandudey.github.io/xcur-rs/index.html"
homepage = "https://www.github.com/jeandudey/xcur-rs/"
repository = "https://www.github.com/jeandudey/xcur-rs/"

[dependencies]
nom = {version = "^2.0", features=["verbose-errors"]}

clippy = { version = "0.0.80", optional = true }

[features]
default = []
dev = ["clippy"]
